...

    private lazy var leftButton: RoundButton = {
        let leftButton = RoundButton(type: .system)
        leftButton.translatesAutoresizingMaskIntoConstraints = false
        leftButton.setImage(UIImage(named: "Cross"), for: .normal)
        leftButton.tintColor = #colorLiteral(red: 0.9949885011, green: 0.4292141497, blue: 0.4242331982, alpha: 1)
        leftButton.accessibilityIdentifier = "swipeLeft"
        leftButton.addTarget(self, action: #selector(reject), for: .touchUpInside)
        return leftButton
    }()

    private lazy var rightButton: RoundButton = {
        let rightButton = RoundButton(type: .system)
        rightButton.setImage(UIImage(named: "Heart"), for: .normal)
        rightButton.tintColor = #colorLiteral(red: 0.3013241887, green: 0.7947661281, blue: 0.5758426189, alpha: 1)
        rightButton.accessibilityIdentifier = "swipeRight"
        rightButton.translatesAutoresizingMaskIntoConstraints = false
        rightButton.addTarget(self, action: #selector(accept), for: .touchUpInside)
        return rightButton
    }()

    private func addConstraints() {
...
