...
            stackView.centerYAnchor.constraint(equalTo: centerYAnchor)
        ])
    }

    private func addMessage() {
        let messageLabel = UILabel()
        messageLabel.text = "It's a match!"
        messageLabel.font = UIFont.preferredFont(forTextStyle: .largeTitle)

        stackView.addArrangedSubview(messageLabel)
    }

    private func addButton() {
        let button = UIButton(type: .system)
        button.setTitle("Awesome!", for: .normal)
        button.titleLabel?.font = UIFont.preferredFont(forTextStyle: .title3)
        button.setTitleColor(.white, for: .normal)
        button.backgroundColor = .blue
        button.layer.cornerRadius = 5

        button.addTarget(self, action: #selector(executeCloseHandler), for: .touchUpInside)
...
