...
                case .failure:
                    imageData = nil
                }

                let gymLocation = CLLocation(latitude: gym.latitude, longitude: gym.longitude)
                let distance = gymLocation.formattedDistanceTo(self.currentLocation)
                let card = Card(title: gym.name, distance: distance, imageData: imageData)
                completion(card)
            }
        } else {
            completion(nil)
        }
    }
...
